--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 <body>
     <div id="container">
         <h1>Tic Tac Toe</h1>
+        <h2 id="prompt">Get Three In A Row</h2>
         <div id="board">
-            <div id="square1" class="square"></div>
-            <div id="square2" class="square"></div>
-            <div id="square3" class="square"></div>
-            <div id="square4" class="square"></div>
-            <div id="square5" class="square"></div>
-            <div id="square6" class="square"></div>
-            <div id="square7" class="square"></div>
-            <div id="square8" class="square"></div>
-            <div id="square9" class="square"></div>
+            <div id="0" class="square zero"></div>
+            <div id="1" class="square one"></div>
+            <div id="2" class="square two"></div>
+            <div id="3" class="square three"></div>
+            <div id="4" class="square four"></div>
+            <div id="5" class="square five"></div>
+            <div id="6" class="square six"></div>
+            <div id="7" class="square seven"></div>
+            <div id="8" class="square eight"></div>
         </div>
-        <div id ="buttonContainer">
-        <button id="play" class="pushme">Press to start</button>
+        <div id ="anotherContainer">
+        <h2 id="prompt2">Click an empty space to begin.</h2>
         <button id="reset" class="pushme">Press to reset</button>
         </div>
     </div>
