--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./index.css" rel="stylesheet" />
     <script src="./index.js" defer></script>
-    <title>Tic Tac Toe: Game</title>
+    <title>Tic Tac Toe</title>
 </head>
 <body>
     <div id="container">
